# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\api\AuthController;
 use App\Http\Controllers\api\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -15,10 +16,26 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+// Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+//     return $request->user();
+// });
+
+Route::middleware('api')
+->prefix('auth')
+->group(function (){
+
+    Route::post('signup', [AuthController::class, 'signup']);
+    Route::post('verifyOTP', [AuthController::class, 'verifyOTP']);
+    Route::post('login', [AuthController::class, 'login']);
+    Route::post('refreshToken', [AuthController::class, 'refreshToken'])->middleware(['jwt.verify']);
+    Route::post('logout', [AuthController::class, 'logout'])->middleware(['jwt.verify']);
+
 });
 
-Route::post('signup', [UserController::class, 'signup']);
+Route::middleware(['api', 'jwt.verify'])
+->prefix('user')
+->group(function (){
 
-Route::post('verifyOTP', [UserController::class, 'verifyOTP']);
+    Route::get('profile', [UserController::class, 'profile']);
+
+});
